Add St.Iosafata church in Kyiv page

--- a/pub/index.html
+++ b/pub/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>УГКЦ Святого Миколая Мирликійського, м.Тернопіль</title>
+    <title>УГКЦ Святого Йосафата, Святошинський район, м.Київ</title>
     <link rel='stylesheet' href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body onload="init()">
     <div class="title">
-        <h1>УГКЦ Святого Миколая Мирликійського</h1>
-        <h2>Дружба, м.Тернопіль</h2>
+        <h1>УГКЦ Святого Йосафата</h1>
+        <h2>Святошинський район, м.Київ</h2>
     </div>
     <div id="app">
         <div class="menu">
@@ -20,7 +20,7 @@
                 {{title}}
             </div>
             <div>
-                <a href="http://www.google.com/maps/place/49.54134528482628,25.550822317600254">
+                <a href="https://www.google.com/maps/place/50.46139554755741,30.382982790470127">
                     Де?
                 </a>
             </div>
