Add Daleka site

--- a/pub/index.html
+++ b/pub/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>УГКЦ Святого Миколая Мирликійського, м.Тернопіль</title>
+    <title>Вулиці Далека і Нова бічна, м.Тернопіль</title>
     <link rel='stylesheet' href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body onload="init()">
     <div class="title">
-        <h1>УГКЦ Святого Миколая Мирликійського</h1>
+        <h1>Вулиці Далека і Нова бічна</h1>
         <h2>Дружба, м.Тернопіль</h2>
     </div>
     <div id="app">
@@ -19,10 +19,8 @@
                 v-on:click="select(link)" v-for="(link, title) in menu">
                 {{title}}
             </div>
-            <div>
-                <a href="http://www.google.com/maps/place/49.54134528482628,25.550822317600254">
-                    Де?
-                </a>
+            <div onclick="window.open('https://goo.gl/maps/gtg2VcvQvmJREx5z6')">
+                Де?
             </div>
         </div>
         <iframe class="mainContent" :src="mainContent"></iframe>
