--- a/pub/pages/community.html
+++ b/pub/pages/community.html
@@ -8,7 +8,7 @@
 <body>
     <div class="page">
         Громада вулиць Далекої та Нової бічної доступна через відкриту
-        <a href="https://invite.viber.com/?g2=AQA48o2qovFfo05juMy9oaCdpD70m4suP8ZYMd8wQt%2FmLLHDKE2vMBfTDneD3k6j">Viber спільноту</a>
+        <a onclick="window.open('https://invite.viber.com/?g2=AQA48o2qovFfo05juMy9oaCdpD70m4suP8ZYMd8wQt%2FmLLHDKE2vMBfTDneD3k6j')"><img height="100px" width="100px" src="../img/viber.png"> спільноту</a>
     </div>
 </body>
 </html>
