Improve community link page

--- a/pub/pages/community.html
+++ b/pub/pages/community.html
@@ -6,9 +6,10 @@
     <title>Громада</title>
 </head>
 <body>
-    <div class="page">
-        Громада вулиць Далекої та Нової бічної доступна через відкриту
-        <a onclick="window.open('https://invite.viber.com/?g2=AQA48o2qovFfo05juMy9oaCdpD70m4suP8ZYMd8wQt%2FmLLHDKE2vMBfTDneD3k6j')"><img height="100px" width="100px" src="../img/viber.png"> спільноту</a>
+    <div class="page"
+     onclick="window.open('https://invite.viber.com/?g2=AQA48o2qovFfo05juMy9oaCdpD70m4suP8ZYMd8wQt%2FmLLHDKE2vMBfTDneD3k6j')">
+        Торкніться <img height="100px" width="100px" src="../img/viber.png"> тут, щоб долучилися
+        до відкритої спільноти вулиць Далекої та Нової бічної
     </div>
 </body>
 </html>
